src/styles.scss
/* ... */
@media (min-width: 992px) {
  .navbar-expand-lg .navbar-nav .nav-link {
      padding-right: 1.2rem;
      padding-left: 1.2rem;
  }
}

// Adds the active colour. The nav container has a class indicating the page
// e.g. 'home' for the home page. This is added from the frontmatter.
.home .home, .about .about a.dropdown-toggle,
.outcomes .outcomes  a.dropdown-toggle, .news-events .news-events
, .outreach .outreach, .post .news-events {
    color: $primary !important;
}

// Can be removed?
// .navbar-light .navbar-nav .nav-link {
//     color: $dark;
// }

// Main footer
footer {
  margin-top: 5rem;
  background: $dark;
  color: $light;

  a:link, h2 a:link {
    text-decoration: none;
    color: $light;
  }
  a:hover, h2 a:hover {
    color: $light;
    text-decoration: underline;
  }
  a:visited {
    color: $light;
  }
  li {
    padding-bottom: .70rem;
  }
}

input[type="email"] {
  padding: 6px 10px;
}

// For the key stats circles
.circle {
  width: 100%;
  border-radius: 50%;
  border: 6px solid $body-color;
  line-height: 0;
  position: relative;
  &::after {
    content: "";
    display: block;
    padding-bottom: 100%;
  }
  span {
    font-size: $h2-font-size;
    margin-bottom: 2rem; // mb-
  }
  .circle-txt {
    position: absolute;
    bottom: 35%;
    width: 100%;
    text-align: center;
  }
}

@media (min-width: 768px) {
  .circle {
    width: 80%;
    span {
      font-size: 4rem;
      margin-bottom: 2.75rem;
    }
    .circle-txt {
      position: absolute;
      bottom: 40%;
    }
  }
}

// Objectives panel
.number {
  position: relative;
  padding-top: 5rem;
  margin-top: 2rem;
  padding: 5rem 5% 3rem;
  span {
    position: absolute;
    color: $gray-700;
    font-size: 8rem;
    top: -4.5rem;
    left: 30%;
    z-index: 0;
  }
}

// Accordion of Work Packages. Can't seem to pass the right classes in via
// React-Bootstrap
.accordion {
  margin-bottom: 2rem;
  .accordion-button {
    background: $body-color;
    color: $light;
    line-height: 1.5;
    min-height: 7rem;
    &:focus {
      border-color: $primary;
      box-shadow: 0 0 0 0.25rem lighten($secondary, 20%);
    }
    &:after {
      background-image: url(./images/plus.svg);
      background-size: 25px;
      background-position: 0 50%;
    }
    &:not(.collapsed)::after {
      background-image: url(./images/minus.svg);
    }
  }
  .text-end {
    color: $primary;
    margin: -1.25rem 0 1rem;
    &:before {
      content: url("./images/by-covid-arrow.svg");
      transform: scale(0.25);
      position: relative;
      top: 1.1rem;
      left: 1rem;
      margin: 0;
      display: inline-block;
    }
  }
}

.anchor{
  display: block;
  height: 80px; /*same height as header*/
  margin-top: -80px; /*same height as header*/
  visibility: hidden;
}

// Progress bar
.bar-progress {
  position: relative;
  // Compensate for absolutely positioned labels.
  margin-bottom: 9rem;
  .progress {
    background-color: $white;
    .progress-bar {
      background-color: $primary;
    }
  }
  .progress-start, .progress-end {
    position: absolute;
    font-size: 0.8rem;
    width: 60px;
    line-height: 1.4;
    top: 20px;
  }
  .progress-end {
    right: 0;
    text-align: right;
  }
}

// Tables
table th {
  color: $body-color;
}

.home main {
  h1 {
    text-align: center;
    font-size: 2.5rem;
    margin-bottom: 0;
    position: relative;
    padding-top: 60px;
    margin-top: 8rem;
    color: white;
    background: url("./images/by-covid-icon-white.svg") no-repeat 50% 0;
    background-size: 50px auto;
  }
  h2 {
    font-size: 2.5rem;
    margin-top: 6rem;
  }
  input[type="submit"] {
    background: $secondary;
  }
}

.bg-semi-opaque {
  background: rgba(255, 255, 255, 0.6);
}


body.home {
  background: rgb(218,54,110);
  background: linear-gradient(90deg, rgba(218,54,110,1) 18%, rgba(86,150,208,1) 100%);
  background-size: cover;
  color: $white;
  .bg-semi-opaque {
    padding: 4rem 0 3em;
    margin-top: 15rem;
    h2 {
      margin-top: 0;
      padding: 1rem;
    }
    p {
      padding: 0 1rem;
    }
  }
  .what-doing-boxes {
    position: relative;
    height: 35rem;
    text-align: center;

    .box {
      padding: 20px 10px 10px;
      width: 300px;
      margin: 5rem auto;
      box-shadow: 5px 5px 3px 0px rgba(0, 0, 0, .2);
    }
  }
  footer {
    margin-top: 0;

  }
}

// .what-doing-boxes {
//   position: relative;
//   height: 50rem;
//   .box {
//     display: inline-block;
//     padding: 20px 10px 0;
//     width: 300px;
//     position: absolute;
//   }
//   .box1 {
//     top: 5rem;
//     left: -20%;
//   }
//   .box2 {
//     top: 20rem;
//     left: 20%;
//   }
//   .box3 {
//     top: 35rem;
//     left: 70%;
//   }
// }

.halo-container {
  background: url("./images/halo.svg") no-repeat 55% -1rem;
  background-size: 65%;
  padding: 5.5rem 0 5.5rem;
  text-align: center;
  margin-top: 8rem;
}
.covid-portal {
  margin: 0 auto;
  position: relative;
  height: 320px;
  width: 320px;
  border-radius: 50%;
  padding: 80px 20px 0;
  background: url("./images/covid19-data-portal-logo.svg") no-repeat 50% 50px;
  background-size: 180px auto;
}

.bg-challenge {
  // background: url("./images/home-lines.svg") no-repeat 50% 50px;
  // background-size: 60% auto;
  margin-top: 5rem;
}

.home-intro {
  margin-bottom: 0;
}
/* ... */

